# python-project-51

./: .coverage  Makefile  README.md  dota2-ru.html  example-com-menu.css  pyproject.toml  setup.cfg  www-google-com-not.html
.github/workflows/: github-check.yml
cli/: __init__.py  main.py  page_loader.py
cli/include/: create_dir.py  pars.py
dota2-ru_files/: dota2-ru-css-build-style-min-css.css  dota2-ru-dota2.ru  dota2-ru-js-all-min-js?.js  dota2-ru-js-app-min-js?.js  dota2-ru-js-comments_new-min-js?.js  dota2-ru-js-forum-app-min-js?.js  dota2-ru-js-forum-dist-auth-min-.js  dota2-ru-js-functions-min-js?.js  dota2-ru-js-main-dist-main-js?.js  dota2-ru-js-matches_esport-min-js?.js  dota2-ru-js-vendor-js?.js  dota2-ru-news-rss-.html  dota2-ru-site-webmanifest.html
page_loader/: __init__.py  create_dir.py  download_img.py  format_file.py  main.py  page_loader.py
page_loader/include/: download.py  download_files.py  download_img.py  format_file.py  pars.py
page_loader/script/: main.py
page_loader2/: __init__.py  page_loader.py
page_loader2/script/: main.py
tests/: test_create_dir.py  test_dowload_img.py  test_download.py
tests/fixtures/: job in image.html  job.html  job_in_image.html
