[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Артём <chipalinchik@gmail.com>"]
packages = [  { include = "page_loader" },]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
flake8 = "^5.0.4"
requests = "^2.28.1"
requests-mock = "^1.10.0"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page-loader = "page_loader.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
